# clean-architecture-lms

./: .dockerignore  .gitignore  Dockerfile  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.env
migration/: config.py  env.py
migration/versions/: 21f7da935e9c_add_categories_courses.py  24e1eee8778c_add_course.py  74a49bf410f9_add_column_to_course.py  8fa427714cc8_add_progress_table.py  93bc8b9882d8_alter_table_lessons.py  9c728190cad5_add_categories.py  a4712db392fe_create_user_table.py  bc480f3db517_add_users_courses.py  ea922dbed2cc_add_columns_to_users_courses.py  fb2a5e1f7441_add_unique_constraint_to_users_courses.py  fce4b7f70cc0_add_lessons.py
src/: __init__.py  manage.py
src/application/common/: saga.py
src/application/handler/: interface.py
src/application/handler/course/: updater.py
src/application/handler/user/: creation.py
src/application/service/auth/: authorization.py  (+2 more)
src/application/use_case/: interface.py
src/domain/common/: data_models.py  entity.py  value_object.py
src/domain/dto/: common.py  user.py
src/infrastructure/mediator/: impl.py  interface.py
src/infrastructure/rmq/: connector.py
src/infrastructure/settings/: config.py
src/presentation/fastapi/: run.py
src/presentation/rmq/: run.py
test/: conftest.py
test/category/: test_create.py  test_delete.py  test_get.py  test_get_many.py  test_update.py
test/integration/: test_container.py
test/integration/user/: test_create.py  test_delete.py  test_get.py  test_get_many.py  test_update.py
test/user/: test_get.py  test_update.py
(+232 files in other folders)
